--- a/publication/comex2021/cite.bib
+++ b/publication/comex2021/cite.bib
@@ -1,9 +1,10 @@
-@ARTICLE{9388911,
-  author={Guo, Chengjun and Zhao, Lingzhi and Cui, Ying and Liu, Zhi and Ng, Derrick Wing Kwan},
-  journal={IEEE Transactions on Wireless Communications}, 
-  title={Power-Efficient Wireless Streaming of Multi-Quality Tiled 360 VR Video in MIMO-OFDMA Systems}, 
+@article{ComEx2021,
+  title={Optimal Adaptive Streaming of A Scalable Multi-view Video via Rate Splitting and SIC},
+  author={Wuyang Jiang and Chencheng Ye and Lingzhi Zhao and Ying Cui and Zhi Liu},
+  journal={IEICE Communications Express},
+  volume={advpub},
+  number={ },
+  pages={},
   year={2021},
-  volume={},
-  number={},
-  pages={1-1},
-  doi={10.1109/TWC.2021.3067803}}
+  doi={10.1587/comex.2021XBL0087}
+}
