--- a/publication/twc2021/cite.bib
+++ b/publication/twc2021/cite.bib
@@ -1,4 +1,4 @@
-@ARTICLE{9388911,
+@ARTICLE{TWC2021,
   author={Guo, Chengjun and Zhao, Lingzhi and Cui, Ying and Liu, Zhi and Ng, Derrick Wing Kwan},
   journal={IEEE Transactions on Wireless Communications}, 
   title={Power-Efficient Wireless Streaming of Multi-Quality Tiled 360 VR Video in MIMO-OFDMA Systems}, 
