--- a/publication/twc2021/cite.bib
+++ b/publication/twc2021/cite.bib
@@ -1,9 +1,9 @@
-@ARTICLE{TWC2021,
+@ARTICLE{TWC21,
   author={Guo, Chengjun and Zhao, Lingzhi and Cui, Ying and Liu, Zhi and Ng, Derrick Wing Kwan},
   journal={IEEE Transactions on Wireless Communications}, 
   title={Power-Efficient Wireless Streaming of Multi-Quality Tiled 360 VR Video in MIMO-OFDMA Systems}, 
   year={2021},
-  volume={},
-  number={},
-  pages={1-1},
+  volume={20},
+  number={8},
+  pages={5408-5422},
   doi={10.1109/TWC.2021.3067803}}
